--- a/env.yaml
+++ b/env.yaml
@@ -8,30 +8,29 @@
 # variables win. See the yenv docs.
 ##################################################
 
+# Base config that is mixed in by the others.
+base:
+  LOG_LEVEL: debug
+  EMIT_STACK_TRACE: false
+
 # Development environment.
 development:
-  PORT: 1338
-  # Go nuts with your own environment variables.
-  DB_HOST: 'localhost'
-
-  # We're in dev mode.
-  DEV_MODE: true
-
-  # Not in production
-  PROD: false
+  ~compose: base
+  # Port to use
+  PORT: 5000
+  # In development it can be useful to get the error stack.
+  EMIT_STACK_TRACE: true
 
 # Running tests
 test:
   # Test environment is based on development.
   ~compose: development
-  TESTING: true
+  # Disable logging for tests
+  LOG_LEVEL: off
 
 # Production environment.
 production:
   # Production environment is based on development.
-  ~compose: development
+  ~compose: base
+  # Port to use
   PORT: 80
-  # We're not in dev mode
-  DEV_MODE: false
-  # We're in production!
-  PROD: true
