--- a/package.json
+++ b/package.json
@@ -23,14 +23,21 @@
     "awilix-koa": "^3.0.0",
     "axios": "^0.18.0",
     "bristol": "^0.4.0",
+    "crypto": "^1.0.1",
     "fejl": "^1.0.2",
+    "jsonwebtoken": "^8.4.0",
+    "jwt-secret": "^1.1.1",
     "koa": "^2.6.2",
     "koa-bodyparser": "^4.2.1",
     "koa-compress": "^3.0.0",
+    "koa-passport": "^4.1.1",
     "koa-respond": "^2.1.0",
     "koa-router": "^7.4.0",
     "lodash": "^4.17.11",
+    "mongoose": "^4.13.18",
     "palin": "^2.2.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "yenv": "^2.1.0"
   },
   "devDependencies": {
