--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "koa-es7-auth-boilerplate",
   "version": "0.0.0",
   "description": "A boilerplate for writing Koa 2 apps with Babel and authorization via passport",
-  "author": "Alexandr Zabedovskii",
+  "author": "Jeff Hansen && Alexandr's Zabedovskii auth",
   "license": "MIT",
   "engines": {
     "node": ">=8.0.0",
