--- a/src/config/config.js.example
+++ b/src/config/config.js.example
@@ -1,6 +1,4 @@
-export const secret = 'supersecretcode';
-export const dbName = 'example-db-name';
-export const dbUser = 'AZabedovskiy';
-export const dbPass = 'hardpassword';
-export const dbHost = 'sandbox.mlab.com';
-export const dbPort = '12345';
+export const secret = 'examplesecretkey'; // random salt
+export const dbAuthType = 'none';
+export const dbHost = 'mongodb';
+export const dbPort = '27017';
